# stock-crawler-de-course-materials

./: .gitignore  Dockerfile  README.md  README.md.bak  crawler_實作操作手冊.md  docker-compose-local.yml  docker-compose-producer-duplicate-network-version.yml  docker-compose-worker-network-version.yml  docker-compose-worker-network.yml  docker-compose-worker.yml  finmind_0050.csv  finmind_demo.py  hahow_course_programming.csv  local.ini  mysql.yml  prod.with.env.Dockerfile  pyproject.toml  rabbitmq.yml  with.env.Dockerfile
compose-advanced/: docker-compose-producer-network-version.yml  docker-compose-producer-network.yml  docker-compose-scheduler-network-version.yml  docker-compose-worker-network-local.yml  docker-compose-worker-network.yml  mysql.yml  rabbitmq-network.yml
crawler/: DEMO_FAIL_README.md  config.py  download_and_upload_taiwan_stock_margin_purchase_short_sale_to_mysql.py  download_and_upload_taiwan_stock_price_to_mysql.py  print_secret_manager.py  producer.py  producer_crawler_finmind.py  producer_crawler_finmind_duplicate.py  producer_crawler_finmind_print.py  producer_demo_fail.py  producer_multi_queue.py  producer_multi_queue_print.py  scheduler_blocking.py  scheduler_print.py  tasks.py  tasks_crawler_finmind.py  tasks_crawler_finmind_duplicate.py  tasks_demo_fail.py  upload_data_to_mysql.py  upload_duplicate_data_to_mysql.py  upload_taiwan_stock_price_to_bigquery.py  upload_taiwan_stock_price_to_mysql.py  worker.py  worker_demo.py
example/: finmind.py  hahow.py
output/: TaiwanStockPrice_00679B.csv  TaiwanStockPrice_2330.csv
課程手冊/: 課程手冊02 - Celery基礎.md  (+5 more)
