[project]
name = "crawler"
version = "0.0.1"
description = "test"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "linsam", email = "samlin266118@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "flask==2.3.3",
    "celery==5.5.0",
    "pandas>=2,<3",
    "requests",
    "apscheduler==3.10.4",
    "loguru==0.6.0",
    "sqlalchemy>=2.0,<3",
    "pymysql==1.1.1",
    "google-cloud-bigquery==3.20.1",
    "tqdm",
    "pyarrow>=17",
    "google-cloud-secret-manager==2.20.0",
    "black>=26.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawler"]
